Fix menu behavior on small screens

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -69,4 +69,9 @@ form+div > a
 }
 
 
+/* ======================= Reponsive ================ */
+
+@media screen and (max-width : 575px){
+
+}
 
